test/e2e/testdata/basic-merge-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: merged-gateway-1
  namespace: gateway-conformance-app-backend
spec:
  gatewayClassName: merge-gateways
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http1
      port: 8080
      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: merged-gateway-2
  namespace: gateway-conformance-app-backend
spec:
  gatewayClassName: merge-gateways
  listeners:
    - allowedRoutes:
        namespaces:
          from: Same
      name: http2
      port: 8081
      protocol: HTTP
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: Gateway
#metadata:
#  name: merged-gateway-3
#  namespace: gateway-conformance-app-backend
#spec:
#  gatewayClassName: merge-gateways
#  listeners:
#    - allowedRoutes:
#        namespaces:
#          from: Same
#      name: http3
#      port: 8082
#      protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merged-gateway-route-1
  namespace: gateway-conformance-app-backend
spec:
  parentRefs:
    - name: merged-gateway-1
  hostnames:
    - "www.example1.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: app-backend-v1
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /merge1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: merged-gateway-route-2
  namespace: gateway-conformance-app-backend
spec:
  parentRefs:
    - name: merged-gateway-2
  hostnames:
    - "www.example2.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: app-backend-v2
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /merge2
#---
#apiVersion: gateway.networking.k8s.io/v1
#kind: HTTPRoute
#metadata:
#  name: merged-gateway-route-3
#  namespace: gateway-conformance-app-backend
#spec:
#  parentRefs:
#    - name: merged-gateway-3
#  hostnames:
#    - "www.example3.com"
#  rules:
#    - backendRefs:
#        - group: ""
#          kind: Service
#          name: infra-backend-v3
#          port: 8080
#          weight: 1
#      matches:
#        - path:
#            type: PathPrefix
#            value: /merge3
